fix full page nav z-index

--- a/components/FullPageNav/FullPageNav.module.scss
+++ b/components/FullPageNav/FullPageNav.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 1000;
+  z-index: 100;
   top: 0;
   left: 0;
   overflow: hidden; /* Prevent scrolling within the div itself */
